# supermodular-tech-exercise

./: .gitignore  README.md
solution_architects/: README.md  pyproject.toml
solution_architects/baseline/: desired_sequence_diagram.mmd
solution_architects/src/solution_architects/: crew.py  main.py
solution_architects/src/solution_architects/config/: agents.yaml  tasks.yaml
solution_architects/src/solution_architects/tools/: callgraphgenerator.py  code_analysis_tool.py  compliance_validation_tool.py  sequence_diagram_tool.py
solution_architects/src/solution_architects/utils/: callgraphgenerator.py  get_paths.py
